# openai-agents-sdk-mcp-examples

./: README.md  main.py  pyproject.toml
src/: agent_stdio.py  agent_streamable_http.py  model.py  server.py
tests/: test_function.py
